<resources>
    <string name="app_name">Bomba Analógica</string>
    <string name="calcular">CALCULAR</string>
    <string name="atribuirPreco">ATRIBUIR PREÇO</string>
    <string name="valorLitro">VALOR LITRO</string>
    <string name="valorOleo">VALOR OLEO</string>
    <string name="valorTaxa">VALOR TAXA</string>
    <string name="proximo">PROXIMO</string>
    <string name="leituraInicial">LEITURA INICIAL</string>
    <string name="leituraFinal">LEITURA FINAL</string>
    <string name="quantidade">QUANTIDADE</string>
    <string name="litros">LITROS</string>
    <string name="valorTotal">VALOR TOTAL</string>
    <string name="entreValorG">R$ Gasolina</string>
    <string name="entreValorO">R$ Óleo</string>
    <string name="nOleo">Nº Óleo</string>
    <string name="addNome">Nome</string>
    <string name="tipo">Tipo</string>
    <string name="gravar">Gravar</string>
    <string name="excluir">Excluir</string>
    <string name="clube">Clube</string>
    <string name="outros">Outros</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrarNovo">Cadastrar novo usuário</string>
    <string name="confirmarEmail">Confirmar E-mail</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="user">Nome Usuário</string>
    <string name="Cadastrar">Show Cadastratros</string>
    <string name="vincular">Vincular Auto</string>
    <string name="cadastrarNovoProp">Cadastrar novo Proprietário</string>
    <string name="propVincularAuto">Vincular Auto p/ Prop</string>
    <string name="splash_activity_image_text" translatable="false">Splash Activity Image</string>
    <string name="splash_activity_text" translatable="false">Bomba Analógica - Bem-vindo</string>
    <string name="prefixo_r_valor">R$ %s</string>
    <string name="iniciar">Iniciar</string>
    <string name="combustivel">R$ Combustível</string>
    <string name="voltar">Voltar</string>
    <string name="close_button_description" />
    <string name="do_not_show_again">Não mostrar novamente.</string>
    <string name="arrow_description">Tutorial da Aplicação</string>

</resources>