<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivityCadastrar">


        <ImageView
            android:id="@+id/icon_add_meioLocomocao"
            android:layout_width="138dp"
            android:layout_height="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/icon_add_auto" />


        <EditText
            android:id="@+id/editCadastrar"
            style="@style/Edit_TextLetras"
            android:layout_width="310dp"
            android:layout_height="65dp"
            android:drawableRight="@drawable/add"
            android:ems="10"
            android:hint="@string/addNome"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_add_meioLocomocao" />

        <RadioGroup
            android:id="@+id/radioGroupFins"
            android:layout_width="309dp"
            android:layout_height="67dp"
            android:ems="10"
            android:gravity="center|center_vertical"
            android:hint="@string/tipo"
            android:inputType="number|numberDecimal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editCadastrar">

            <RadioButton
                android:id="@+id/radioButtonClube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clube" />

            <RadioButton
                android:id="@+id/radioButtonOutros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outros" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/progressebarMain3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupFins"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGravarCadastrar"
            style="@style/Button"
            android:layout_width="286dp"
            android:layout_height="60dp"
            android:text="@string/gravar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressebarMain3"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>