<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.alexsanderprates.myapplication.MainActivityCreateLogin">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="138dp"
            android:layout_height="124dp"
            android:background="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/ic_auto_photo" />


        <EditText
            android:id="@+id/editUser"
            style="@style/Edit_TextLogin"
            android:layout_width="310dp"
            android:layout_height="65dp"
            android:drawableRight="@drawable/icon_add"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>

        <EditText
            android:id="@+id/editEmail"
            style="@style/Edit_TextLetras"
            android:layout_width="309dp"
            android:layout_height="67dp"
            android:drawableRight="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUser" />

        <EditText
            android:id="@+id/editSenhaCreateLogin"
            style="@style/Edit_TextLetras"
            android:layout_width="309dp"
            android:layout_height="67dp"
            android:drawableRight="@drawable/ic_eye"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />

        <EditText
            android:id="@+id/editSenhaCreateLoginConfirm"
            style="@style/Edit_TextLetras"
            android:layout_width="309dp"
            android:layout_height="67dp"
            android:drawableRight="@drawable/ic_eye"
            android:ems="10"
            android:hint="@string/confirmarSenha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSenhaCreateLogin" />

        <EditText
            android:id="@+id/editPix"
            style="@style/Edit_TextLetras"
            android:layout_width="309dp"
            android:layout_height="67dp"
            android:drawableRight="@drawable/ic_pix"
            android:hint="Chave Pix"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSenhaCreateLoginConfirm" />

        <CheckBox
            android:id="@+id/chekSenhaCreatLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:text="Ver senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPix"
            />

        <ProgressBar
            android:id="@+id/progressebar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chekSenhaCreatLogin"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreatLogin"
            style="@style/Button"
            android:layout_width="286dp"
            android:layout_height="60dp"
            android:text="@string/cadastrarNovo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressebar"/>

        <TextView
            android:id="@+id/btnNovoCadastroProp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cadastrarNovoProp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreatLogin"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>