<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_main_calculations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivityCalculations">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        app:srcCompat="@drawable/counter" />

    <EditText
        android:id="@+id/editTextLeInic"
        style="@style/Edit_Text"
        android:layout_width="319dp"
        android:layout_height="72dp"
        android:drawableRight="@drawable/ic_combustivel"
        android:ems="10"
        android:hint="@string/leituraInicial"
        android:inputType="number"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"/>


    <EditText
        android:id="@+id/editTextLeFim"
        style="@style/Edit_Text"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:drawableRight="@drawable/ic_combustivel"
        android:ems="10"
        android:hint="@string/leituraFinal"
        android:inputType="number"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLeInic"/>

    <EditText
        android:id="@+id/editTextQntOl"
        style="@style/Edit_Text"
        android:layout_width="124dp"
        android:layout_height="72dp"
        android:drawableRight="@drawable/ic_oil"
        android:ems="10"
        android:hint="@string/nOleo"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLeFim"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCalcular"
        style="@style/Button"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:text="@string/calcular"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQntOl"/>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="347dp"
        android:layout_height="186dp"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/ContainerComponentes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCalcular" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.494"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>